tests/lean/t4.lean.expected.out
N : Type
a : N
Bool → Bool : Type
F : Type → Type
F : Type → Type
f : N → N → N
len : Π (A : Type) (n : N), vec A n → N
B → B : Bool
A → A : Type
C : Type
t4.lean:25:6: error: unknown identifier 'A'
R : Type → Bool
λ (x y : N), x : N → N → N
[choice N N]
N
N
M
tst.M : Type
foo.M : Type
M : Type
t4.lean:48:6: error: unknown identifier 'M'
ok
Declarations:
tst.M
tst.N
N
a
F
R
len
vec
f
foo.M
Bool
-------------
